--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-Head{
-    background-color: red;
-}
-
 #bg{
     position: relative;
     border: dashed 3px;
@@ -9,28 +5,21 @@ Head{
     padding: 10px;
 }
 
-.box-top{
+.header{
     padding: 10px;
     border: dashed blue 1px;
 }
 
-.box-left{
+.dashboard{
     padding: 10px;
     position: absolute;
     left:10px;
     border:solid greenyellow 1px;
 }
 
-.box-rigth{
+.content{
     padding: 10px;
     position: absolute;
     right:10px;
     border:solid greenyellow 1px;
-}
-
-
-.box-content{
-    padding: 10px;
-    position: ;
-    border: solid red 1px;
 }
